--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,14 +2,11 @@ stages:
   - test
 
 maven:
-  image: maven:3.8.4-openjdk-17
+  image: maven:3.8.4-openjdk-22
   stage: test
-  before_script:
-    - apt-get update && apt-get install -y wget gnupg
-    - wget -qO - https://dl.google.com/linux/linux_signing_key.pub | apt-key add -
-    - echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb/ stable main" > /etc/apt/sources.list.d/google-chrome.list
-    - apt-get update && apt-get install -y google-chrome-stable
-    - apt-get install -y libnss3 libgconf-2-4
+  services:
+    - name: selenium/standalone-chrome:latest
+      alias: selenium
   script:
     - mvn test
   artifacts:
