Added Chrome driver dependenci

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,13 @@
 
     <!-- Other Dependencies -->
     <dependency>
+    <groupId>io.github.bonigarcia</groupId>
+    <artifactId>webdrivermanager</artifactId>
+    <version>5.8.0</version>
+    <scope>test</scope>
+    </dependency>
+
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.11</version>
