--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,16 +1,28 @@
-image: maven:3.8.5-openjdk-17
-
 stages:
+  - build
   - test
 
 variables:
-  MAVEN_OPTS: "-Dmaven.test.failure.ignore=true"
+  JAVA_HOME: "/usr/lib/jvm/java-17-openjdk"
+  MAVEN_HOME: "/usr/share/maven"
 
-# cache:
-#   paths:
-#     - .m2/repository
+before_script:
+  - echo "Installing Maven and Java..."
+  - apt-get update
+  - apt-get install -y openjdk-17-jdk maven
 
-test_job:
+build:
+  stage: build
+  script:
+    - echo "Building the project..."
+    - mvn clean install
+
+test:
   stage: test
   script:
+    - echo "Running tests..."
     - mvn test
+
+after_script:
+  - echo "Cleaning up..."
+  - rm -rf target
